--- a/.env
+++ b/.env
@@ -3,17 +3,17 @@
 
 
 
-SESSION_ID="INCONNU~XD~"
-AUTO_READ_STATUS=true
+SESSION_ID="INCONNU~XD~kbFQTDyY#T-AHFLNo2kSxArpLyjJohKiJA_AOMxFWJG1qDAkS_qc"
+AUTO_READ_STATUS=falaw
 STATUS_READ_MSG="*Status Seen By INCONNU-XD ⚡*"
 AUTO_STATUS_REPLY=false
 AUTO_REJECT_CALLS=false
-MODE="public"
+MODE=false
 WELCOME=false
 AUTO_READ_MESSAGES=false
 AUTO_TYPING=false
-OWNER_NAME="INCONNU BOY"
-OWNER_NUMBER="554488138425"
+OWNER_NAME="✰𝑹𝒀𝑼𝑲𝒁♕︎ "
+OWNER_NUMBER="15619292033"
 AUTO_RECORDING=false
 ALWAYS_ONLINE=false
 AUTO_BLOCK=true
